2017-06-16  Brent Fulgham  <bfulgham@apple.com>

        [WK2][iOS][macOS] Extend the sandbox to allow reading of AVFoundation's VideoPerformanceHUD preference
        https://bugs.webkit.org/show_bug.cgi?id=173476
        <rdar://problem/31594568>

        Reviewed by Alex Christensen.

        Update the sandbox to permit WebContent process to read the AVFoundation preferences for the performance HUD.

        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:
        * WebProcess/com.apple.WebProcess.sb.in:

2017-06-16  Daniel Bates  <dabates@apple.com>

        Use the term icon instead of favicon
        https://bugs.webkit.org/show_bug.cgi?id=173400

        Reviewed by Alex Christensen.

        * WebProcess/Network/WebLoaderStrategy.cpp:
        (WebKit::maximumBufferingTime):

2017-06-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Remove WKCookieManagerSoup
        https://bugs.webkit.org/show_bug.cgi?id=173467

        Reviewed by Michael Catanzaro.

        It's unused.

        * PlatformGTK.cmake:
        * PlatformWPE.cmake:
        * UIProcess/API/C/soup/WKCookieManagerSoup.cpp: Removed.
        * UIProcess/API/C/soup/WKCookieManagerSoup.h: Removed.

2017-06-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Remove wrong headers check from some GTK+ API files.

        Remove the __WEBKIT_WEB_EXTENSION_H_INSIDE__ check since these are not actually shared.

        * UIProcess/API/gtk/WebKitEditorState.h:
        * UIProcess/API/gtk/WebKitOptionMenu.h:
        * UIProcess/API/gtk/WebKitPrintCustomWidget.h:

2017-06-15  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r218325): [GTK] Runtime critical warnings running layout tests that show a popup menu
        https://bugs.webkit.org/show_bug.cgi?id=173421

        Reviewed by Carlos Alberto Lopez Perez.

        In r218325 I forgot to create a WebKitPopupMenu or WebPopupMenuProxyGtk depending on whether the view is a