@@ -1,5 +1,17 @@
 2017-06-16  Brent Fulgham  <bfulgham@apple.com>
 
+        [WK2][macOS] Expand sandbox to better support video playback on mac mini
+        https://bugs.webkit.org/show_bug.cgi?id=173492
+        <rdar://problem/32804073>
+
+        Reviewed by Alex Christensen.
+
+        Hardware differences in Mac Mini's require some different IOKit preferences to be accessible.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
+2017-06-16  Brent Fulgham  <bfulgham@apple.com>
+
         [WK2][iOS][macOS] Extend the sandbox to allow reading of AVFoundation's VideoPerformanceHUD preference
         https://bugs.webkit.org/show_bug.cgi?id=173476
         <rdar://problem/31594568>
